spacing fixed

--- a/solarvibes/site/static/css/test.css
+++ b/solarvibes/site/static/css/test.css
@@ -5,3 +5,11 @@ textarea.form-control {
 input.form-control {
   height: 45px !important;
 }
+
+
+#fh5co-main .fh5co-narrow-content {
+  height: 100% !important;
+  width: 80%;
+  margin: 0 auto;
+  padding: 4em 0;
+}
