--- a/solarvibes/site/static/sass/style.scss
+++ b/solarvibes/site/static/sass/style.scss
@@ -310,6 +310,7 @@ figure {
 }
 
 #fh5co-main {
+  height: 100% !important;
 	width: 85%;
 	float: right;
 	@include transition(.5s);
